# nex

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  project.intent.md  registry-v2.json
.claude/: settings.json
.github/: copilot-instructions.md
.nex/: release.toml
docs/plans/: 2026-03-16-nex-release-design.md  2026-03-17-nex-marketplace-design.md  2026-03-17-nex-marketplace-plan.md
src/: main.rs
src/commands/: check.rs  convert.rs  dev.rs  doctor.rs  info.rs  init.rs  install.rs  list.rs  marketplace.rs  mod.rs  profile.rs  publish.rs  release.rs  search.rs  status.rs  uninstall.rs  update.rs
src/core/: cc_adapter.rs  changelog.rs  config.rs  dirs.rs  docs_sync.rs  git.rs  hash.rs  lock.rs  marketplace.rs  mod.rs  platform.rs  profiles.rs  reconcile.rs  registry.rs  state.rs
tests/: smoke.sh
