[package]
name = "nex"
version = "0.7.0"
edition = "2024"
description = "Cross-CLI plugin distribution for AI agents"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
sha2 = "0.10"
git2 = "0.20"
dirs = "6"
colored = "3"
fs2 = "0.4"
anyhow = "1"
tempfile = "3"
chrono = { version = "0.4", features = ["clock"] }
which = "7"
toml = "0.8"
semver = "1"
pathdiff = "0.2"
shellexpand = "3.1.2"

[profile.release]
strip = true
lto = true
